--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeTemplate",
+  "name": "react-native-template",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "i18next": "^24.0.5",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-i18next": "^15.1.3",
+    "react-native": "0.76.3",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-localize": "^3.3.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,14 +44,12 @@
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
-    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "react-test-renderer": "18.3.1"
   },
   "engines": {
     "node": ">=18"
